--- a/nginx.conf
+++ b/nginx.conf
@@ -5,29 +5,26 @@ http {
 	default_type application/octet-stream;
 
 	server {
-        	listen  80;
+    listen  80;
 		root	/var/www/html/lumen/public;
-		
-		location / {
-			index  index.html index.htm index.php;
-			if ( !-e $request_filename) {
-                        	rewrite ^.* /index.php last;
-	                }
-		}
 
-	        location ~* \.php$ {
-			try_files	$uri $document_root/index.php$is_args$args;
-			include		fastcgi_params;	      
+    location / {
+        index  index.html index.htm index.php;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+      try_files $uri /index.php =404;
+
+      fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+      include		fastcgi_params;	      
 			fastcgi_index	index.php;
 
-		        fastcgi_param	SCRIPT_FILENAME		$document_root$fastcgi_script_name;
-			fastcgi_param	SCRIPT_NAME		$fastcgi_script_name;
-			fastcgi_param	QUERY_STRING		$query_string;
-			fastcgi_param	CONTENT_TYPE		$content_type;
-			fastcgi_param	CONTENT_LENGTH		$content_length;
+      fastcgi_param	SCRIPT_FILENAME		$document_root$fastcgi_script_name;
 
-			fastcgi_pass	lumen:9000;
-	        }
+      fastcgi_pass	lumen:9000;
+    }
 
 	}
 
